# web-hook-ml

./: Cargo.toml  README.md  docker-compose.yml
local-setup/mappings/: stock-ml.json
src/: main.rs
src/mercado_libre/client/: mercado_libre_client.rs  mod.rs
src/mercado_libre/model/: mod.rs  notification.rs  stock.rs
